# ExternalWatchdog

./: .gitignore  README.md  build_depends.repos  safety_island_manual.md
diagnositic_monitor/: README.md
diagnositic_monitor/diagnostic_error_monitor/src/: diagnostic_error_monitor_core.cpp  diagnostic_error_monitor_node.cpp
diagnostic/diagnostic_error_monitor/: CMakeLists.txt  package.xml
diagnostic/diagnostic_error_monitor/launch/: diagnostic_error_monitor_node.launch.xml
diagnostic/diagnostic_error_monitor/src/: diagnostic_error_monitor_core.cpp
src/can_switch_interface/: CMakeLists.txt  README.md  package.xml
src/can_switch_interface/include/can_switch_interface/: can_switch_interface.hpp
src/can_switch_interface/launch/: can_switch_interface.launch.xml
src/can_switch_interface/src/: can_switch_interface.cpp
src/diagnositic_monitor/: README.md
src/diagnostic_monitor/diagnostic_error_monitor/: package.xml
src/diagnostic_monitor/diagnostic_error_monitor/config/: diagnostic_error_monitor.param.yaml
src/diagnostic_monitor/diagnostic_error_monitor/include/diagnostic_error_monitor/: diagnostic_error_monitor_core.hpp
src/diagnostic_monitor/diagnostic_error_monitor/launch/: diagnostic_error_monitor.launch.xml  diagnostic_error_monitor_node.launch.xml
src/diagnostic_monitor/diagnostic_error_monitor/src/: diagnostic_error_monitor_core.cpp
src/dummy_hazard_status_publisher/: CMakeLists.txt  README.md  package.xml
src/dummy_hazard_status_publisher/config/: dummy_hazard_status_publisher.param.yaml  hazard_status_converter.param.yaml
src/dummy_hazard_status_publisher/include/dummy_hazard_status_publisher/: dummy_hazard_status_publisher.cpp  dummy_hazard_status_publisher.hpp
src/dummy_hazard_status_publisher/launch/: dummy_hazard_status_publisher.launch.xml  hazard_status_converter.launch.xml
src/dummy_hazard_status_publisher/src/: dummy_hazard_status_publisher.cpp  dummy_hazard_status_publisher_node.cpp
src/emergency_stop_operator/: CMakeLists.txt  README.md  package.xml
src/emergency_stop_operator/include/emergency_stop_operator/: emergency_stop_operator.hpp
src/emergency_stop_operator/launch/: emergency_stop_operator.launch.py  emergency_stop_operator.launch.xml
src/emergency_stop_operator/src/emergency_stop_operator/: emergency_stop_operator.cpp
src/hazard_status_converter/: CMakeLists.txt  README.md  package.xml
src/hazard_status_converter/include/hazard_status_converter/: hazard_status_converter.hpp
src/hazard_status_converter/launch/: hazard_status_converter.launch.xml
src/hazard_status_converter/src/: hazard_status_converter.cpp  hazard_status_converter_node.cpp
src/launch/tilde_monitor_launch/: CMakeLists.txt  README.md  package.xml
src/launch/tilde_monitor_launch/config/tilde_aggregator/: tilde_aggregator.param.yaml
src/launch/tilde_monitor_launch/config/tilde_error_monitor/: tilde_error_monitor.param.yaml
src/launch/tilde_monitor_launch/launch/: tilde_monitor.launch.py
src/launcher/: CMakeLists.txt  README.md  package.xml
src/launcher/launch/: safety_island_psim.launch.xml  safety_island_psim_single_autoware_ecu.launch.xml
src/raw_vehicle_cmd_converter/: CMakeLists.txt  README.md  package.xml
src/raw_vehicle_cmd_converter/include/raw_vehicle_cmd_converter/: raw_vehicle_cmd_converter.hpp
src/raw_vehicle_cmd_converter/launch/: raw_vehicle_converter.launch.xml
src/raw_vehicle_cmd_converter/src/: raw_vehicle_cmd_converter.cpp
src/scripts/: change_dummy_external_hazard_status_sub.sh  change_to_autonomous.sh  set_init_and_goal_sub_comfortable.sh
src/supervisor/: CMakeLists.txt  package.xml
src/supervisor/include/supervisor/: can_switch_interface.hpp  ecu.hpp  supervisor.hpp  voter.hpp
src/supervisor/src/: can_switch_interface.cpp  supervisor.cpp  voter.cpp
src/supervisor_psim/: CMakeLists.txt  README.md  package.xml
src/supervisor_psim/include/supervisor/: control_switch_interface.hpp  ecu.hpp  supervisor.hpp  voter.hpp
src/supervisor_psim/launch/: supervisor_psim.launch.xml  supervisor_psim_node.launch.xml
src/supervisor_psim/src/: control_switch_interface.cpp  supervisor.cpp  supervisor_node.cpp  voter.cpp
src/supervisor_vehicle_cmd_gate/: CMakeLists.txt  READEME.md  package.xml
src/supervisor_vehicle_cmd_gate/include/supervisor_vehicle_cmd_gate/: supervisor_vehicle_cmd_gate.hpp
src/supervisor_vehicle_cmd_gate/src/: supervisor_vehicle_cmd_gate.cpp  vehicle_cmd_filter.cpp
src/tilde_monitor/: README.md
src/tilde_monitor/tilde_aggregator/: CMakeLists.txt  README.md  package.xml
src/tilde_monitor/tilde_aggregator/config/: tilde_aggregator.param.yaml  tilde_message_tracking_tag.param.yaml
src/tilde_monitor/tilde_aggregator/include/tilde_aggregator/: tilde_aggregator_core.hpp
src/tilde_monitor/tilde_aggregator/launch/: tilde_aggregator.launch.xml  tilde_aggregator_node.launch.xml
src/tilde_monitor/tilde_aggregator/src/: tilde_aggregator_core.cpp  tilde_aggregator_node.cpp
src/tilde_monitor/tilde_error_monitor/: README.md
src/vehicle_cmd_gate/: CMakeLists.txt  package.xml
src/vehicle_info_util/: CMakeLists.txt  README.md  package.xml
src/voter/: CMakeLists.txt  package.xml
src/voter/include/voter/: switch.hpp  voter.hpp
src/voter/launch/: voter.launch.xml
src/voter/src/: switch.cpp  voter.cpp
src/watchdog/external_watchdog/: README.md  package.xml
src/watchdog/external_watchdog/include/external_watchdog/: external_watchdog_core.hpp
src/watchdog/external_watchdog/launch/: external_watchdog.launch.xml  external_watchdog_node.launch.xml
src/watchdog/external_watchdog/src/: external_watchdog_core.cpp  external_watchdog_node.cpp
tilde/tilde_aggregator/: CMakeLists.txt  package.xml
tilde/tilde_error_monitor/: CMakeLists.txt  package.xml
tilde_monitor/tilde_aggregator/: README.md
tilde_monitor/tilde_error_monitor/: CMakeLists.txt  package.xml
tilde_monitor/tilde_error_monitor/include/tilde_error_monitor/: tilde_error_monitor_core.hpp
watchdog/external_watchdog/: CMakeLists.txt  package.xml
watchdog_msgs/watchdog_system_msgs/: CMakeLists.txt  package.xml
(+33 files in other folders)
