<?xml version="1.0"?>
<package format="3">
  <name>hazard_status_converter</name>
  <version>0.1.0</version>
  <description>The hazard_status_converter package</description>
  <maintainer email="akihiro.sakurai@tier4.co.jp">Akihiro Sakurai</maintainer>
  <author email="akihiro.sakurai@tier4.jp">Akihiro Sakurai</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_auto_system_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>watchdog_system_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
