<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raw_vehicle_cmd_converter</name>
  <version>0.1.0</version>
  <description>The raw_vehicle_cmd_converter package</description>
  <maintainer email="akihiro.sakurai@tier4.jp">Akihiro Sakurai</maintainer>

  <license>Apache License 2.0</license>

  <author email="takamasa.horibe@tier4.jp">Takamasa Horibe</author>
  <author email="akihiro.sakurai@tier4.jp">Akihiro Sakurai</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>autoware_auto_control_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tier4_vehicle_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
