<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diagnostic_error_monitor</name>
  <version>0.1.1</version>
  <description>The diagnostic_error_monitor_package in ROS2</description>
  <maintainer email="akihiro.sakurai@tier4.jp">Akihiro Sakurai</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>fmt</depend>
  <depend>watchdog_system_msgs</depend>

  <exec_depend>diagnostic_aggregator</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
