<?xml version="1.0"?>
<package format="3">
  <name>tilde_monitor_launch</name>
  <version>0.1.0</version>
  <description>The tilde_monitor_launch package</description>

  <maintainer email="akihiro.sakurai@tier4.jp">Akihiro Sakurai</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
