<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>external_watchdog</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="akihiro.sakurai@tier4.jp">asana17</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>watchdog_system_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>pacmod3_msgs</depend>
  <depend>vehicle_info_util</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
